tests/transpiler/x/scala/order_by_map.error
/tmp/scala_outputs/order_by_map.scala:8: error: No implicit Ordering defined for (Any, Any).
  val sorted: ArrayBuffer[Item] = ({ var _tmp = ArrayBuffer[((Any, Any),Item)]() ; for (x <- data) { _tmp.append(((x.a, x.b), x)) }; var _res = _tmp.sortBy(_._1).map(_._2); _res })
                                                                                                                                                           ^
one error found
