tests/transpiler/x/scala/order_by_map.scala
// Generated by Mochi v0.10.36 on 2025-07-22 16:58:28 GMT+7
import scala.collection.mutable.{ArrayBuffer, Map}
object Main {
  case class Item(var a: Int, var b: Int)
  
  val data: ArrayBuffer[Item] = ArrayBuffer(Item(1, 2), Item(1, 1), Item(0, 5))
  
  val sorted: ArrayBuffer[Item] = ({ var _tmp = ArrayBuffer[((Any, Any),Item)]() ; for (x <- data) { _tmp.append(((x.a, x.b), x)) }; var _res = _tmp.sortBy(_._1).map(_._2); _res })
  
  def main(args: Array[String]): Unit = {
    println(sorted)
  }
}
